SERVER-47639 Fix race with async getHosts request and concurrent topology change